# colab_gemini_utils

./: .gitignore  README.md  codebase_to_colab.py  colab.ignore  colab_to_codebase.py  example_prompt.md  pyproject.toml  utils.py
colab_gemini_utils/scripts/: codebase_to_colab.py  colab_to_codebase.py
colab_gemini_utils/src/: utils.py
colab_gemini_utils/tests/: test_codebase_to_colab.py
demo/: .env  main.py  utils.py
demo/utils/: formatting.py  maths.py
scripts/: codebase_to_colab.py  colab_to_codebase.py
